# Dual-Franka-Compliant-CarryTask

./: .gitignore  .gitmodules  FILES_OVERVIEW.md  ISSUE_RESOLVED.md  LICENSE  MANUAL_STARTUP.md  README.md  check_environment.sh  diagnose.sh  dual_panda.urdf  fix_gui.py  fix_h.py  fix_pub.py  patch_launch.py  patch_modes.py  patch_modes_v2.py  patch_spawner.py  patch_transport.py  plot_experiment_results.py  sensor_dashboard.py  start_dual_arm_task.sh  vision_core.py
dual_arm_control/src/: dual_arm_gripper_controller.cpp  dual_arm_move_test.cpp
dual_arm_description/launch/: view_dual_arm.launch.py
dual_arm_description/urdf/: long_bar.urdf  test_robot.urdf.xacro
dual_arm_moveit_config/config/: dual_panda.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
dual_arm_moveit_config/launch/: moveit_rviz.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dual_arm_moveit_config/scripts/: set_home_joint_state.py
dual_arm_task/: package.xml  setup.cfg  setup.py
scripts/patches/: check_acm.py  fix_newlines.py  fix_pub_end.py  fix_rviz.py  patch_cpp_publisher.py  patch_dashboard.py  patch_flush.py  patch_gui.py  patch_gui_dim.py  patch_retreat.py  patch_srdf.py  patch_to_modes.py  test_pipeline.py
src/dual_arm_control/: CMakeLists.txt  package.xml
src/dual_arm_control/include/dual_arm_control/: dual_arm_gripper_controller.hpp
src/dual_arm_control/launch/: move_test.launch.py
src/dual_arm_control/src/: dual_arm_move_test.cpp  dual_arm_pick_place.cpp
src/dual_arm_description/: CMakeLists.txt  package.xml
src/dual_arm_description/launch/: gazebo.launch.py  view_dual_arm.launch.py
src/dual_arm_description/urdf/: dual_arm.urdf.xacro
src/dual_arm_moveit_config/: .setup_assistant  package.xml
src/dual_arm_moveit_config/config/: dual_panda.srdf  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/dual_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  spawn_controllers.launch.py
src/dual_arm_task/: setup.py
src/mujoco_ros_pkgs/mujoco_ros2_control_system/src/: mujoco_ros2_control_system.cpp
src/mujoco_ros_pkgs/mujoco_ros2_dummy_plugin/src/: dummy_ros2_plugin.cpp
src/mujoco_ros_pkgs/mujoco_ros2_sensors/include/mujoco_ros2_sensors/: mujoco_sensor_handler_plugin.h
src/mujoco_ros_pkgs/mujoco_ros2_sensors/src/: mujoco_sensor_handler_plugin.cpp
src/multipanda_ros2/: CONTROLLER_TROUBLESHOOTING.md  QUICK_START.md  RVIZ_INTERACTIVE_GUIDE.md
src/multipanda_ros2/dual_arm_carry_task/: CMakeLists.txt  README.md  package.xml
src/multipanda_ros2/dual_arm_carry_task/launch/: dual_arm_carry_task.launch.py
src/multipanda_ros2/dual_arm_carry_task/src/: dual_arm_carry_task.cpp  dual_arm_carry_task.cpp.backup_grasp
src/multipanda_ros2/franka_bringup/config/sim/: dual_sim_controllers.yaml
src/multipanda_ros2/franka_bringup/launch/real/: franka.launch.py
src/multipanda_ros2/franka_bringup/launch/sim/: dual_franka_sim.launch.py
src/multipanda_ros2/franka_description/mujoco/franka/: dual_scene.xml  mj_dual.xml  objects.xml
src/multipanda_ros2/franka_description/robots/sim/: dual_panda_arm_sim.ros2_control.xacro
src/multipanda_ros2/franka_hardware/: CMakeLists.txt  package.xml
src/multipanda_ros2/franka_hardware/include/franka_hardware/sim/: franka_mj_hardware_system.hpp
src/multipanda_ros2/franka_hardware/src/sim/: franka_mj_hardware_system.cpp  gripper_sim_action_server.cpp
src/multipanda_ros2/franka_moveit_config/config/: chomp_planning.yaml  dual_panda_ros_controllers.yaml  joint_limits.yaml  sim_dual_panda_ros_controllers.yaml
src/multipanda_ros2/franka_moveit_config/launch/: sim_dual_moveit.launch.py
src/multipanda_ros2/franka_moveit_config/rviz/: dual_moveit.rviz
src/multipanda_ros2/franka_moveit_config/srdf/: dual_group_definition.xacro  dual_panda.srdf.xacro  dual_panda_generated.srdf
src/multipanda_ros2/franka_multi_mode_controller/multi_mode_controller/include/multi_mode_controller/base/: panda_controller_base.h  panda_controller_ros_interface.h
src/multipanda_ros2/franka_multi_mode_controller/multi_mode_controller/include/multi_mode_controller/utils/: buffered.h
src/multipanda_ros2/franka_multi_mode_controller/multi_mode_controller/src/: des_coupled_dual_cartesian_impedance_controller.cpp  dual_cartesian_impedance_controller.cpp  panda_cartesian_impedance_controller.cpp  panda_joint_impedance_controller.cpp  panda_joint_velocity_controller.cpp  redundancy_resolution.cpp  robot_data.cpp  twin_cartesian_impedance_controller.cpp  twin_joint_impedance_controller.cpp
src/multipanda_ros2/garmi_packages/garmi_controllers/include/garmi_controllers/: head_controller.hpp
